--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,9 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+body{
+    background: #778beb;
+}
+.jumbotron{
+    background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 44%, rgba(71,114,114,1) 96%);
+}
